# brick

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_samples.sh
cmake/: DownloadBearssl.cmake  DownloadCurl.cmake  DownloadEigen.cmake  DownloadGflags.cmake  DownloadGlog.cmake  DownloadGoogleTest.cmake  DownloadJson11.cmake  DownloadProtobuf.cmake  DownloadZlib.cmake
demo/: cvhelper.h  gen_json.cpp  get_file_md5.cpp  list_files_in_dir.cpp
opencv_test/: CMakeLists.txt  README.md  run.sh
opencv_test/samples/: background_subtraction.cpp  discrete_fourier_transform.cpp  em.cpp  mat_the_basic_image_contrainer.cpp  svm_test.cpp  video_input_psnr_ssim.cpp  video_read_write.cpp
samples/: addressbook.pb.cc  addressbook.pb.h  addressbook.proto  query.txt  sample_curl.cpp  sample_eigen.cpp  sample_gflag.cpp  sample_glog.cpp  sample_gtest.cpp  sample_protobuf.cpp  sample_zlib.cpp
samples/cppbasic/: sample_fstream.cpp
socket/: client.c  server.c
