CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12 FATAL_ERROR)

# ---[ Project
PROJECT(OpenCVTest C CXX)

IF(CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux")
    SET(TARGET_OS_LINK_LIBS pthread)
ELSEIF(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    SET(_CMAKE_TOOLCHAIN_LOCATION "C:/Program Files (x86)/Microsoft Visual Studio 14.0/VC/bin")
    MESSAGE(STATUS ${_CMAKE_TOOLCHAIN_LOCATION})
    SET(CMAKE_C_COMPILER    ${_CMAKE_TOOLCHAIN_LOCATION}/cl.exe)
    SET(CMAKE_CXX_COMPILER  ${_CMAKE_TOOLCHAIN_LOCATION}/cl.exe)
ELSEIF()
    MESSAGE(FATAL_ERROR "Not support ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}!!!")
ENDIF()

# ---[ CMake options
FIND_PACKAGE(OpenCV)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OPENCV_LIB_DIR})
FILE(GLOB samples ${PROJECT_SOURCE_DIR}/samples/*.cpp)

FOREACH (sample ${samples})
	STRING(REGEX MATCH "[^/]+$" sample_file ${sample})
	STRING(REPLACE ".cpp" "" sample_basename ${sample_file})
	ADD_EXECUTABLE(test_${sample_basename} ${sample})
	TARGET_LINK_LIBRARIES(test_${sample_basename} ${OpenCV_LIBS})

    IF(NOT WIN32)
		TARGET_LINK_LIBRARIES(test_${sample_basename} pthread)
	ENDIF()
	INSTALL(TARGETS test_${sample_basename} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
ENDFOREACH()
